--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -8,6 +8,7 @@
   width: 100%;
   display: flex;
   flex-direction: row;
+  color: var(--text-color);
 
   @media screen and (max-width: 1000px) {
     flex-direction: column;
