--- a/src/components/Skills/Skill.scss
+++ b/src/components/Skills/Skill.scss
@@ -2,18 +2,14 @@
   font-size: 14px;
   font-weight: bold;
   margin: 0 0 5px;
-  color: #333333;
+  color: var(--text-color);
 }
 
 .skill {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 8px;
   padding: 5px;
-  border-radius: 4px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  background-color: #ffffff;
 }
 
 .progressBar {
