--- a/src/components/DayNightThemeToggle/DayNightThemeToggle.scss
+++ b/src/components/DayNightThemeToggle/DayNightThemeToggle.scss
@@ -37,6 +37,8 @@ body[data-theme='dark'] {
   --sun-right: -10px;
 }
 
+// Beautiful sun/moon icons from https://css.gg/
+
 .moon,
 .moon::after {
   display: block;
