--- a/src/components/Contacts/Contacts.scss
+++ b/src/components/Contacts/Contacts.scss
@@ -1,6 +1,19 @@
 .contacts {
-  border-radius: 4px;
-  border: 1px solid #e0e0e0;
-  padding: 16px;
-  margin-bottom: 16px;
+  margin-top: 15px;
+  padding: 8px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.contact {
+  display: inline-flex;
+  width: 30px;
+  height: 30px;
+  background: no-repeat;
+  background-size: cover;
+  svg {
+    width: 100%;
+    height: 100%;
+    fill: var(--text-color);
+  }
 }
