--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -1,4 +1,7 @@
 .skills {
+  margin-top: 40px;
+  padding-top: 40px;
+  border-top: 1px solid var(--border-color-1);
   @media screen and (max-width: 1000px) {
     display: none;
   }
