--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+
 html, body {
   margin: 0;
   background-color: var(--background-color);
@@ -6,22 +8,39 @@ html, body {
 
 :root {
   --theme-animation-time: .3s;
+
   --background-light: #c8c7c763;
-  --background-dark: #212a2e;
-  --text-light: #121416d8;
-  --text-dark: #efe8e8;
-  --border-light: rgba(0,0,0,.1);
-  --border-dark: rgba(255,255,255,.1);
+  --background-dark: #0E1117;
+
+  --text-color-dark-1: #E9E9E9;
+  --text-color-dark-2: #ADB6C0;
+  --text-color-dark-3: #8B949E;
+  --text-color-dark-4: #F0F6FC;
+  --text-color-dark-5: #58A6FF;
+
+  --text-color-light-1: #efe8e8;
+
+  --border-color-light-1: #21262D; /////
+  --border-color-light-2: #21262D; /////
+  --border-color-dark-1: #21262D;
+  --border-color-dark-2: #30363D;
 }
 
 body[data-theme='light'] {
   --background-color: var(--background-light);
-  --text-color: var(--text-light);
-  --border-color: var(--border-light);
+  --text-color-1: var(--text-color-light-1);
+
+  --border-color-1: var(--border-color-light-1);
+  --border-color-2: var(--border-color-light-2);
 }
 
 body[data-theme='dark'] {
   --background-color: var(--background-dark);
-  --text-color: var(--text-dark);
-  --border-color: var(--border-dark);
+  --text-color-1: var(--text-color-dark-1);
+  --text-color-2: var(--text-color-dark-2);
+  --text-color-3: var(--text-color-dark-3);
+  --text-color-4: var(--text-color-dark-4);
+  --text-color-5: var(--text-color-dark-5);
+  --border-color-1: var(--border-color-dark-1);
+  --border-color-2: var(--border-color-dark-2);
 }
