--- a/src/components/Contacts/Contacts.scss
+++ b/src/components/Contacts/Contacts.scss
@@ -1,19 +1,16 @@
 .contacts {
-  margin-top: 15px;
-  padding: 8px;
+  margin-top: 40px;
   display: flex;
   justify-content: space-between;
 }
 
 .contact {
   display: inline-flex;
-  width: 30px;
-  height: 30px;
-  background: no-repeat;
-  background-size: cover;
+  width: 24px;
+  height: 24px;
   svg {
     width: 100%;
     height: 100%;
-    fill: var(--text-color);
+    fill: var(--text-color-1);
   }
 }
