--- a/src/components/DayNightThemeToggle/DayNightThemeToggle.scss
+++ b/src/components/DayNightThemeToggle/DayNightThemeToggle.scss
@@ -21,7 +21,7 @@
   transition: left ease var(--theme-animation-time), background-color ease var(--theme-animation-time);
   width: 20px;
   height: 20px;
-  background-color: var(--text-color);
+  background-color: var(--text-color-1);
   border-radius: 10px;
 }
 
