--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -1,14 +1,15 @@
 .layout {
-  font-family: Arial, sans-serif;
+  font-family: 'Inter', sans-serif;
   width: 80%;
   margin: 0 auto;
+  padding-top: 40px;
 }
 
 .section {
   width: 100%;
   display: flex;
   flex-direction: row;
-  color: var(--text-color);
+  color: var(--text-color-1);
 
   @media screen and (max-width: 1000px) {
     flex-direction: column;
@@ -17,7 +18,7 @@
 
 .article {
   flex: 4;
-  margin: 10px;
+  margin: 0 32px;
   &:first-child {
     flex: 1;
   }
