--- a/src/components/Person/Person.scss
+++ b/src/components/Person/Person.scss
@@ -5,18 +5,16 @@
 }
 
 .photo {
-  width: 150px;
-  height: 150px;
+  width: 100%;
+  max-width: 400px;
   border-radius: 50%;
   object-fit: cover;
-  border: 3px solid #e0e0e0;
 }
 
 .buttons {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  margin-top: 8px;
   @media screen and (max-width: 1000px) {
     display: none;
   }
