--- a/src/components/Skills/Skill.scss
+++ b/src/components/Skills/Skill.scss
@@ -1,27 +1,25 @@
-.title {
-  font-size: 14px;
-  font-weight: bold;
-  margin: 0 0 5px;
-  color: var(--text-color);
-}
-
 .skill {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 5px;
+  margin-bottom: 24px;
+}
+
+.title {
+  margin: 0 0 10px;
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: -0.01em;
+  color: var(--text-color-1);
 }
 
 .progressBar {
   width: 100%;
-  height: 10px;
-  background-color: #f3f3f3;
-  border-radius: 4px;
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+  height: 4px;
+  background-color: #41434B;
 }
 
 .progress {
   height: 100%;
-  background-color: rgba(0,0,0, .3);
-  border-radius: 4px;
+  background-color: #838386;
 }
