--- a/src/components/Summary/Summary.scss
+++ b/src/components/Summary/Summary.scss
@@ -1,17 +1,26 @@
 .summary {
-  padding: 10px;
-  color: var(--text-color);
+  color: var(--text-color-1);
+
+  svg {
+    display: block;
+    margin: 64px auto 40px;
+  }
 }
 
-.title {
+.name {
   display: block;
-  margin: 10px 0;
-  font-size: 21px;
+  font-size: 20px;
   font-weight: bold;
   @media screen and (max-width: 1000px) {
     display: none;
   }
 }
-.text {
-
+.title {
+  display: block;
+  margin-bottom: 12px;
+  color: var(--text-color-4);
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 600;
+  text-align: center;
 }
