--- a/src/components/Contacts/Contacts.scss
+++ b/src/components/Contacts/Contacts.scss
@@ -8,9 +8,47 @@
   display: inline-flex;
   width: 24px;
   height: 24px;
+  @media screen and (max-width: 1000px) {
+    width: 48px;
+    height: 48px;
+  }
   svg {
     width: 100%;
     height: 100%;
     fill: var(--text-color-1);
   }
+}
+
+.buttons {
+  margin-top: 40px;
+}
+
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 37px;
+  font-size: 14px;
+  font-weight: 500;
+  text-decoration: none;
+
+  svg {
+    width: 16px;
+    height: 16px;
+    display: inline-block;
+    margin-right: 3px;
+  }
+}
+
+.email {
+  background-color: #206FEB;
+  border-radius: 4px;
+  color: #fff;
+  fill: var(--text-color-pure);
+}
+
+.tel {
+  color: var(--text-color-3);
+  fill: var(--text-color-3);
 }
