fix email text color

--- a/src/components/Contacts/Contacts.scss
+++ b/src/components/Contacts/Contacts.scss
@@ -44,7 +44,7 @@
 .email {
   background-color: #206FEB;
   border-radius: 4px;
-  color: #fff;
+  color: var(--text-color-pure);
   fill: var(--text-color-pure);
 }
 
