--- a/src/components/JobExperience/JobExperienceItem.scss
+++ b/src/components/JobExperience/JobExperienceItem.scss
@@ -1,6 +1,6 @@
 .jobExperience {
   padding: 32px 0;
-  border-top: 1px solid var(--border-color-1);
+  border-top: 1px solid var(--border-color);
   border-radius: 4px;
 }
 
@@ -8,7 +8,8 @@
   font-size: 24px;
   font-weight: 700;
   line-height: 30px;
-  color: var(--text-color-5);
+  color: var(--text-color-1);
+  letter-spacing: -2%;
   margin: 0 0 12px;
 }
 
@@ -16,6 +17,8 @@
   font-size: 12px;
   font-weight: 400;
   line-height: 18px;
+  color: var(--text-color-2);
+  letter-spacing: -1%;
   margin-bottom: 24px;
 }
 
@@ -24,6 +27,7 @@
   font-weight: 500;
   line-height: 21px;
   color: var(--text-color-2);
+  letter-spacing: -1%;
 }
 
 .keySkills {
