--- a/src/components/Skills/Skill.scss
+++ b/src/components/Skills/Skill.scss
@@ -1,25 +1,31 @@
 .skill {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   margin-bottom: 24px;
 }
 
-.title {
+.head {
   margin: 0 0 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.name {
   font-size: 14px;
   font-weight: 400;
-  letter-spacing: -0.01em;
-  color: var(--text-color-1);
+  letter-spacing: -1%;
+  color: var(--text-color-3);
+}
+
+.emoji {
+
 }
 
 .progressBar {
   width: 100%;
   height: 4px;
-  background-color: #41434B;
+  background-color: var(--progressbar-color);
 }
 
 .progress {
   height: 100%;
-  background-color: #838386;
+  background-color: var(--progress-color);
 }
