--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -6,3 +6,12 @@
     display: none;
   }
 }
+
+.title {
+  margin: 0 0 24px;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: -1%;
+  color: var(--text-color-3);
+}
