--- a/src/App.scss
+++ b/src/App.scss
@@ -21,9 +21,11 @@ html, body {
   --text-light-1: #24292F;
   --text-light-2: #57606A;
   --text-light-3: #24292F;
+  --text-light-4: rgba(87, 96, 106, 0.8);
   --text-dark-1: #FFFFFF;
   --text-dark-2: #8B949E;
   --text-dark-3: #E9E9E9;
+  --text-dark-4: #8B949E;
 
   --progress-light: #57606A99;
   --progress-dark: #838386;
