--- a/src/components/JobExperience/JobExperience.scss
+++ b/src/components/JobExperience/JobExperience.scss
@@ -17,6 +17,10 @@
   margin: 0 0 12px;
 }
 
+.company {
+  color: var(--text-color-1);
+}
+
 .subtitle {
   font-size: 12px;
   font-weight: 400;
@@ -27,6 +31,15 @@
 }
 
 .descriptionText {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 21px;
+  color: var(--text-color-2);
+  letter-spacing: -1%;
+}
+
+.descriptionList {
+  padding: 0;
   font-size: 14px;
   font-weight: 500;
   line-height: 21px;
