Markup simplification, no country, hint event listener

--- a/src/App.scss
+++ b/src/App.scss
@@ -27,11 +27,12 @@ html, body {
   --text-dark-3: #E9E9E9;
   --text-dark-4: #8B949E;
 
+  --text-color-link: #2f81f7;
+
   --progress-light: #57606A99;
   --progress-dark: #838386;
   --progressbar-light: #57606A33;
   --progressbar-dark: #41434B;
-
 
   --border-light-1: #21262D;
   --border-light-2: #24292F;
