--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -1,12 +1,5 @@
 .layout {
-  font-family: 'Inter', sans-serif;
   width: 80%;
-  margin: 0 auto;
-  padding-top: 40px;
-}
-
-.section {
-  width: 100%;
   display: flex;
   flex-direction: row;
   color: var(--text-color-1);
@@ -14,12 +7,18 @@
   @media screen and (max-width: 1000px) {
     flex-direction: column;
   }
+  font-family: 'Inter', sans-serif;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding-top: 40px;
 }
 
-.article {
+aside {
+  flex: 1;
+  min-width: 220px;
+}
+
+main {
   flex: 4;
-  margin: 0 32px;
-  &:first-child {
-    flex: 1;
-  }
+  margin: 0 0 0 58px;
 }
