--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -2,11 +2,14 @@
   width: 80%;
   display: flex;
   flex-direction: row;
-  color: var(--text-color-1);
+  position: relative;
 
   @media screen and (max-width: 1000px) {
     flex-direction: column;
+    width: 100%;
   }
+
+  color: var(--text-color-1);
   font-family: 'Inter', sans-serif;
   max-width: 1280px;
   margin: 0 auto;
@@ -16,9 +19,15 @@
 aside {
   flex: 1;
   min-width: 220px;
+  @media screen and (max-width: 1000px) {
+    margin: 0 30px;
+  }
 }
 
 main {
   flex: 4;
   margin: 0 0 0 58px;
+  @media screen and (max-width: 1000px) {
+    margin: 0 30px;
+  }
 }
